--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   in_app_review: ^2.0.6
   floating_frosted_bottom_bar:
   camera: ^0.10.5+9
+  image_picker: ^1.0.7
+  dio: ^5.4.0
 
 
 
