--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   camera: ^0.10.5+9
   image_picker: ^1.0.7
   dio: ^5.4.0
+  pdf: ^3.10.7
+  printing: ^5.11.1
+  path_provider: ^2.1.2
 
 
 
