ai model + bug fixing

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,8 +24,9 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.ezdental"
-    compileSdkVersion flutter.compileSdkVersion
+    //compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    compileSdkVersion 34
 
     aaptOptions {
         noCompress 'tflite'
