--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,10 +66,11 @@ dependencies:
   printing: ^5.11.1
   path_provider: ^2.1.2
   flutter_vision: ^1.1.4
-  flutter_stripe: ^9.5.0+1
+  #flutter_stripe: ^9.5.0+1
   razorpay_flutter: ^1.3.5
   fluttertoast: ^8.2.2
   flutter_dotenv: ^5.1.0
+  gallery_saver: ^2.0.1
 
 
 
